<?xml version="1.0"?>
<package format="2">
  <name>f550_description</name>
  <version>0.0.0</version>
  <description>The f550_description package</description>
  <maintainer email="uavteam@todo.todo">uavteam</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>xacro</depend>

  <export>
  </export>
</package>
