<?xml version="1.0"?>
<package format="2">
  <name>f550_description</name>
  <version>0.0.0</version>
  <description>Meshes and URDF(xacro) files of F550 MAV</description>
  <maintainer email="ueknot@gmail.com">Takaki Ueno</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>xacro</depend>

  <export>
  </export>
</package>
